profilelist1exp/unpackaged/objects/Transportation__c.object
<CustomObject>
    <description>BOLT &amp; GSL Project - object for managing transportation details</description>
    <fields>
        <fullName>Customer_Engagement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Engagement</label>
        <referenceTo>Customer_Engagement__c</referenceTo>
        <relationshipLabel>Transportation</relationshipLabel>
        <relationshipName>Transportation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Destination_Location__c</fullName>
        <label>Destination Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination__c</fullName>
        <label>Destination</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dropoff_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Travel break</description>
        <label>Dropoff Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agenda_Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Breaks</value>
            </filterItems>
            <filterItems>
                <field>Agenda_Content__c.Break_Type__c</field>
                <operation>equals</operation>
                <value>Travel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agenda_Content__c</referenceTo>
        <relationshipLabel>Transportation (Dropoff Location)</relationshipLabel>
        <relationshipName>Dropoff_Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ending_Time__c</fullName>
        <label>Ending Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00AM</fullName>
                </value>
                <value>
                    <fullName>12:15AM</fullName>
                </value>
                <value>
                    <fullName>12:30AM</fullName>
                </value>
                <value>
                    <fullName>12:45AM</fullName>
                </value>
                <value>
                    <fullName>01:00AM</fullName>
                </value>
                <value>
                    <fullName>01:15AM</fullName>
                </value>
                <value>
                    <fullName>01:30AM</fullName>
                </value>
                <value>
                    <fullName>01:45AM</fullName>
                </value>
                <value>
                    <fullName>02:00AM</fullName>
                </value>
                <value>
                    <fullName>02:15AM</fullName>
                </value>
                <value>
                    <fullName>02:30AM</fullName>
                </value>
                <value>
                    <fullName>02:45AM</fullName>
                </value>
                <value>
                    <fullName>03:00AM</fullName>
                </value>
                <value>
                    <fullName>03:15AM</fullName>
                </value>
                <value>
                    <fullName>03:30AM</fullName>
                </value>
                <value>
                    <fullName>03:45AM</fullName>
                </value>
                <value>
                    <fullName>04:00AM</fullName>
                </value>
                <value>
                    <fullName>04:15AM</fullName>
                </value>
                <value>
                    <fullName>04:30AM</fullName>
                </value>
                <value>
                    <fullName>04:45AM</fullName>
                </value>
                <value>
                    <fullName>05:00AM</fullName>
                </value>
                <value>
                    <fullName>05:15AM</fullName>
                </value>
                <value>
                    <fullName>05:30AM</fullName>
                </value>
                <value>
                    <fullName>05:45AM</fullName>
                </value>
                <value>
                    <fullName>06:00AM</fullName>
                </value>
                <value>
                    <fullName>06:15AM</fullName>
                </value>
                <value>
                    <fullName>06:30AM</fullName>
                </value>
                <value>
                    <fullName>06:45AM</fullName>
                </value>
                <value>
                    <fullName>07:00AM</fullName>
                </value>
                <value>
                    <fullName>07:15AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Est_of_Attendees__c</fullName>
        <label>Est# of Attendees</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Create and save the Transportation request form. Then click the Add Attendees&quot;</defaultValue>
        <label>&lt;font color=&quot;#FF0000&quot;&gt; Please Note:</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pickup_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pickup Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Agenda_Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Breaks</value>
            </filterItems>
            <filterItems>
                <field>Agenda_Content__c.Break_Type__c</field>
                <operation>equals</operation>
                <value>Travel</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Agenda_Content__c</referenceTo>
        <relationshipLabel>Transportation (Pickup Location)</relationshipLabel>
        <relationshipName>Pickup_Location</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Request_Car_Type__c</fullName>
        <label>Request Car Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sedan</fullName>
                </value>
                <value>
                    <fullName>SUV</fullName>
                </value>
                <value>
                    <fullName>Bus</fullName>
                </value>
                <value>
                    <fullName>Limo</fullName>
                </value>
                <value>
                    <fullName>Limo Bus</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Selected_Attendee__c</fullName>
        <label>Selected Attendee</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Starting_From__c</fullName>
        <label>Starting From</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Airport</fullName>
                </value>
                <value>
                    <fullName>Dell</fullName>
                </value>
                <value>
                    <fullName>Hotel</fullName>
                </value>
                <value>
                    <fullName>Restaurant</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Starting_Location__c</fullName>
        <label>Starting Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Starting_Time__c</fullName>
        <label>Starting Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12:00AM</fullName>
                </value>
                <value>
                    <fullName>12:15AM</fullName>
                </value>
                <value>
                    <fullName>12:30AM</fullName>
                </value>
                <value>
                    <fullName>12:45AM</fullName>
                </value>
                <value>
                    <fullName>01:00AM</fullName>
                </value>
                <value>
                    <fullName>01:15AM</fullName>
                </value>
                <value>
                    <fullName>01:30AM</fullName>
                </value>
                <value>
                    <fullName>01:45AM</fullName>
                </value>
                <value>
                    <fullName>02:00AM</fullName>
                </value>
                <value>
                    <fullName>02:15AM</fullName>
                </value>
                <value>
                    <fullName>02:30AM</fullName>
                </value>
                <value>
                    <fullName>02:45AM</fullName>
                </value>
                <value>
                    <fullName>03:00AM</fullName>
                </value>
                <value>
                    <fullName>03:15AM</fullName>
                </value>
                <value>
                    <fullName>03:30AM</fullName>
                </value>
                <value>
                    <fullName>03:45AM</fullName>
                </value>
                <value>
                    <fullName>04:00AM</fullName>
                </value>
                <value>
                    <fullName>04:15AM</fullName>
                </value>
                <value>
                    <fullName>04:30AM</fullName>
                </value>
                <value>
                    <fullName>04:45AM</fullName>
                </value>
                <value>
                    <fullName>05:00AM</fullName>
                </value>
                <value>
                    <fullName>05:15AM</fullName>
                </value>
                <value>
                    <fullName>05:30AM</fullName>
                </value>
                <value>
                    <fullName>05:45AM</fullName>
                </value>
                <value>
                    <fullName>06:00AM</fullName>
                </value>
                <value>
                    <fullName>06:15AM</fullName>
                </value>
                <value>
                    <fullName>06:30AM</fullName>
                </value>
                <value>
                    <fullName>06:45AM</fullName>
                </value>
                <value>
                    <fullName>07:00AM</fullName>
                </value>
                <value>
                    <fullName>07:15AM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Travel_Notes__c</fullName>
        <label>Travel Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Travel_Type__c</fullName>
        <label>Travel Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flight arrival</fullName>
                </value>
                <value>
                    <fullName>Flight departure</fullName>
                </value>
                <value>
                    <fullName>Dinner</fullName>
                </value>
                <value>
                    <fullName>Day of briefing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Transportation</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Transportation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Transportation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VerifyTransportationAvailable</fullName>
        <active>true</active>
        <description>Looks at the Transportation Available question on the site record</description>
        <errorConditionFormula>ISPICKVAL(Customer_Engagement__r.Calendar_Management__r.Site__r.Offer_Transportation__c, &quot;No&quot;) || (ISPICKVAL(Customer_Engagement__r.Dell_Solution_Center_Site__r.Offer_Transportation__c, &quot;No&quot;))</errorConditionFormula>
        <errorMessage>Transportation is not available for the selected site.</errorMessage>
    </validationRules>
</CustomObject>